# bot-telegram

./: .env.example  .gitignore  .gitlab-ci.yml  README.md  ecosystem.config.js  pyproject.toml  requirements.txt  telegram-runner.js.example
app/: cek.py  cek_download.py  cek_server.py  main.py
app/controllers/: chanel_group_handler.py  login_controller.py  spaces_controller.py  telegram_controller.py  telegram_crowler.py  telegram_group.py  telegram_message.py  webhook.py
app/models/: telegram_model.py
app/sessions/: +6285280933757.session
app/utils/: encode_emoji.py  utils.py
app/views/: telegram_view.py
backend/: .env.example  .gitignore  README.md  ecosystem.config.js.example  requirements.txt
backend/app/: main.py
backend/app/controllers/: auth_controller.py  chanel_group_handler.py  handler_message.py  telegram_controller.py
backend/app/database/: db.py
backend/app/models/: telegram_model.py  user.py
backend/app/utils/: utils.py
backend/app/views/: telegram_view.py
chanel_message/: FUCKTHEOPENUP3.json  GLASSSHUBB.json  GMT0GLASS.json  HQglass.json  bankcrasheris.json  cBank_logs.json  cbanke_logs.json  cloudmika.json  goblins_gang.json  goblins_hub.json  goblis_free_logs.json  goodlesscloud.json  grubhubglass.json  hubhead.json  moneygrubs.json  rootmika.json  snatch_cloud.json  stormcloudlogs.json  xCloudReviews.json  xCloudURL.json
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.js
sessions/: +6282333899903.session  +6282333899903.session-journal  +6285280933757.session  +6285280933757.session-journal
(+5 files in other folders)
